RESOLVED FIXED 248334
[macOS] Fix input[type=search] rendering in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=248334
Summary [macOS] Fix input[type=search] rendering in vertical writing mode
Tim Nguyen (:ntim)
Reported 2022-11-24 23:08:08 PST
Created attachment 463722 [details] Screenshot of issues See screenshot
Attachments
Screenshot of issues (48.28 KB, image/png)
2022-11-24 23:08 PST, Tim Nguyen (:ntim)
no flags
Radar WebKit Bug Importer
Comment 1 2022-11-24 23:08:19 PST
Tim Nguyen (:ntim)
Comment 2 2022-11-24 23:09:07 PST
Aditya Keerthi
Comment 3 2023-11-07 23:31:11 PST
EWS
Comment 4 2023-11-08 16:58:14 PST
Committed 270415@main (64d1b1b4705a): <https://commits.webkit.org/270415@main> Reviewed commits have been landed. Closing PR #20146 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.